# mcp-servers

./: .env.example  .gitignore  HUE_PLAN.md  HUE_REFERENCE.md  MCP_SEPARATION_PLAN.md  MEMORY_MCP_SERVER_PLAN.md  README.md  deploy.sh  dev.sh  pyproject.toml  refresh.sh
.github/: copilot-instructions.md
deploy/: PROXMOX_DEPLOY.md  deploy.sh  mcp-knowledge-api.service  mcp-server@.service  setup-systemd.sh
docs/: DEPLOYMENT.md  MEMORY_TOOLS.md  UPLOAD_SYSTEM.md
drafts/: kiosk_clock_tools.py
servers/: __init__.py  calculator.py  calendar.py  gdrive.py  gmail.py  housekeeping.py  hue.py  knowledge.py  knowledge_api.py  knowledge_source_files.py  monarch.py  notes.py  pdf.py  playwright.py  rag.py  shell_control.py  spotify.py  tv.py  web_search.py
shared/: __init__.py  datetime_utils.py  embeddings.py  google_auth.py  hue_auth.py  memory_config.py  memory_maintenance.py  memory_repository.py  monarch_auth.py  spotify_auth.py  spotify_identifiers.py  tasks.py  time_context.py  vector_store.py
tests/: test_datetime_utils.py  test_knowledge_curation.py  test_servers.py
web/: index.html  upload.html
