[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-servers"
version = "0.1.0"
description = "Standalone MCP servers — deployed to Proxmox via systemd"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.14.1",
    "uvicorn>=0.30.0",
]

[project.optional-dependencies]
# Per-server extras — install only what you need on the target host
shell = []                    # shell_control has no extra deps
playwright = [
    "playwright>=1.57.0",
]
google = [
    "google-api-python-client>=2.0.0",
    "google-auth>=2.0.0",
    "google-auth-oauthlib>=1.0.0",
    "google-auth-httplib2>=0.1.0",
]
gdrive = [
    "mcp-servers[google]",
    "httpx>=0.27.0",
]
gmail = [
    "mcp-servers[google]",
]
calendar = [
    "mcp-servers[google]",
]
notes = [
    "mcp-servers[google]",
]
spotify = [
    "spotipy>=2.25.1",
]
monarch = [
    "monarchmoney>=0.1.12",
    "gql<3.5.0",
]
pdf = [
    "kreuzberg[chunking,entity-extraction,gmft,easyocr,langdetect]>=3.20.2",
]
all = [
    "mcp-servers[shell,playwright,google,gdrive,gmail,calendar,notes,spotify,monarch,pdf]",
]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=0.25.2",
    "ruff>=0.4.0",
]

[tool.setuptools]
packages = ["servers", "shared"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
